--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "template-node-typescript",
+  "name": "ecct-roman-num-conv",
   "version": "1.0.0",
   "org": "my-org",
-  "description": "Code pattern for starting a typescript-based microservice",
+  "description": "Typescript-based microservice for Roman Numeral Converter",
   "main": "index.js",
   "config": {
     "protocol": "http",
