Update project and image names

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
-sonar.projectKey=ibm:template-node-typescript
+sonar.projectKey=ibm:ecct-roman-num-conv
 sonar.sources=src
 sonar.coverage.exclusions=src/logger/*
 sonar.language=ts
