--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "pact:publish": "ts-node test/pact-publish",
     "sonarqube:scan": "npm run test && ts-node test/sonarqube-scan"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Sandhya Nayak",
+  "license": "Apache-2.0",
   "dependencies": {
     "cls-hooked": "^4.2.2",
     "cors": "^2.8.5",
